Criação do script em javascript que calcula o imc

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
     </div>
      
     <!--Script para o calculo-->  
-    <!--
     <script type="text/javascript">
         function imc() {
             var altura = document.getElementById("altura").value;
@@ -61,8 +60,8 @@
                 }
                 document.write(nome + " você possui indice de massa corporal igual a " + m + " sendo classificado como " + i);
         }
-    </script>-->
-
+    </script>
+    
     <button type="submit" class="btn btn-primary" name="logar" value="logar" onclick="imc()">Calcular</button>
 </body>
 </html>
